--- a/src/Labs/Lab2/index.css
+++ b/src/Labs/Lab2/index.css
@@ -19,7 +19,7 @@
 .wd-selector-2 > .wd-selector-3 > .wd-selector-4 {
   background-color: yellow;
   color: blue;  }
-  
+
   .wd-fg-color-black { color: black; }
 .wd-fg-color-white { color: white; }
 .wd-fg-color-blue { color: #7070ff; }
@@ -38,5 +38,68 @@
   background-color: green; }
 .wd-bg-color-gray {
   background-color: lightgray; }
+
+  .wd-border-fat {
+    border-width: 20px 30px 20px 30px; }
+ .wd-border-thin {
+    border-width: 4px; }
+ .wd-border-solid {
+    border-style: solid; }
+ .wd-border-dashed {
+    border-style: dashed; }
+ .wd-border-yellow {
+    border-color: #ffff07; }
+ .wd-border-red {
+    border-color: #ff7070; }
+ .wd-border-blue {
+    border-color: #7070ff; }
+
+  .wd-padded-top-left {
+    padding-top: 50px;
+    padding-left: 50px;
+  }
+    
+  .wd-padded-bottom-right {
+    padding-bottom: 50px;
+    padding-right: 50px;
+  }
+
+  .wd-padding-fat {
+     padding: 50px;
+  }
+
+  .wd-margin-bottom {
+    margin-bottom: 50px;
+  }
+  
+  .wd-margin-right-left {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  
+  .wd-margin-all-around {
+    margin: 30px;
+  }
+
+  .wd-rounded-corners-top {
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+  }
+  
+  
+  .wd-rounded-corners-bottom {
+   border-bottom-left-radius: 40px;
+   border-bottom-right-radius: 40px;
+  }
+  
+  .wd-rounded-corners-all-around {
+   border-radius: 50px;
+  }
+  
+  .wd-rounded-corners-inline {
+   border-radius: 30px 0px 20px 50px;
+  }
+  
+  
  
  
